--- a/db/seed/seed.yml
+++ b/db/seed/seed.yml
@@ -3,6 +3,7 @@ user: User.csv
 group: Group.csv
 membership: Membership.csv
 ling: Ling.csv
+role: Role.csv
 category: Category.csv
 property: Property.csv
 example: Example.csv
